--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,5 @@ before_install:
 install:
   - cpanm --quiet --installdeps --notest Gnome2::Vte
   - cpanm --quiet --installdeps --notest Devel::Cover
-  - cpanm --quiet --installdeps --notest Test::Script
-  - cpanm --quiet --installdeps --notest Test::More
+  - cpanm --installdeps Test::Script
+  - cpanm --installdeps Test::More
